@@ -1,5 +1,13 @@
 2008-06-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	  Commenting.
+
+	* tools/migratetmpl.pl:
+	  Convert character entities back.
+
+2008-06-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  Start collection info about slowly deprecating crack.
 
